app/assets/stylesheets/base.scss
// BASE
//////////////////////////////

html {
  box-sizing:  border-box;
  font-family: $font;
  font-size:   $font-size;
  line-height: 1;
}

*,
*:before,
*:after {
  box-sizing: inherit;
  margin:     0px;
  padding:    0px;
}

body {
  display:          grid;
  color:            $font-color;
  background-color: $bg-color;
  padding:          15px;
}

div {
  //border: 1px solid white;
}

h1,h2,h3,h4,h5,h6 {
  font-family: $font;
  display:     inline;
  font-weight: 400;
}
h1 { font-size: 10vw; }
h2 { font-size:  8vw; }
h3 { font-size:  6vw; }
h4 { font-size:  5vw; }
h5 { font-size:  3vw; }
h6 { font-size:  2vw; }

p,ul {
  //font-family: $font-thin;
  font-size:   1.6vw;
  display:     inline;
}

ul {
  display: inline-block;
}

hr {
  border-color: $font-color-dim;
}

a {
  color: $link-color;

  &:visited {
    color: $link-color;
  }
}

// span {
//   // Fonts
//   &.thin       { font-family: $font-thin;       }
//   &.extra-thin { font-family: $font-extra-thin; }
// 
//   // Colors
//   &.blue   { color: $font-color-blue;   }
//   &.yellow { color: $font-color-yellow; }
//   &.purple { color: $font-color-purple; }
// }

table {
  //shrink to fit
  width:       1px;

  text-align:  center;
  white-space: nowrap;
  padding:     10px;

  td {
    padding:        0px 7px;
    border:         1px solid $border-light;
    vertical-align: top;
  }

  &.table {

    //used for show and edit/new views
    &.left {
      text-align: left;

      //shrink to fit
      td:first-child {
        width:       1px;
        white-space: nowrap;
      }
    }

    //used for only edit/new views
    &.no-border {
      td {
        border: none;

        //fixed size, do not adjust to browser width
        &:last-child {
          width:       450px;
          white-space: nowrap;
          display:     inline-block;
        }
      }
    }
  }
}

input {
  width:      100%;
  padding:    2px 0px;
  text-align: center;
}
textarea {
  width:      100%;
  height:     20vh;
  padding:    5px;
  text-align: left;
}
select {
  padding:         2px 5px;
  text-align-last: center;

  //need this for all select boxes except for date-select,
  // date-select gets squished at this value.
  &.width-max {
    width: 100%;
  }
}
input, textarea, select {
  font-family:      $font;
  font-size:        $font-size;
  border:           1px solid $border-light;
  border-radius:    5px;
  background-color: $bg-color;

  &:focus {
    outline:    none;
    box-shadow: 0px 0px 2px $focus-color;
  }

  //auto-forms use input[type=submit] to submit forms for
  // some weird reason... so here it is.
  &[type=submit] {
    padding: 5px;
    width:   auto;

    &:hover {
      border: 1px solid black;
    }
  }
}

//to display textarea input correctly on show views
pre {
  font-size:   inherit;
  color:       inherit;
  border:      initial;
  padding:     initial;
  font-family: inherit;
}

//This is the banner thing at the top after saving
#notice {
  color:      #32592d;
  text-align: center;
}


// RESPONSIVE
//////////////////////////////////////////////////

// Small Screens < 1024px
@media only screen and (max-width: 1024px) {
  p,ul { font-size: 14pt;   }
}

// Small Screens < px
@media only screen and (max-width: 690px) {
  h5 { font-size: 15.5pt; }
  h6 { font-size: 15pt;   }
}

// Small Screens < 430px
@media only screen and (max-width: 430px) {
  h1 { font-size: 32pt;   }
  h2 { font-size: 25.5pt; }
  h3 { font-size: 19.2pt; }
  h4 { font-size: 16pt;   }
}

